# Lab-Avanzado

./: Bitacora.txt
Codes/: adm02.cpp  inherintance.cpp  template.cpp  tsimple.hpp  vec2
Codes III/codes_III/e0/: CMakeLists.txt
Codes III/codes_III/e1/: CMakeLists.txt
Codes III/codes_III/e2/: CMakeLists.txt
Codes III/codes_III/e3/: CMakeLists.txt  inherintance.cpp
Codes III/codes_III/e3/estudiante/: CMakeLists.txt
Codes III/codes_III/e3/estudiante/include/: estudiante.hpp
Codes III/codes_III/e3/estudiante/src/: estudiante.cpp  persona.cpp
Codigos/: inter.cpp  sizes  sizes.cpp  tarea1.cpp
Proyecto 1/: Bitacora.txt
Proyecto 1/Programa/Data_acc/: read_paa.cpp
Proyecto 1/Programa/Data_acc/include/: largs.hpp
Proyecto 1/Programa/Data_acc/src/: largs.cpp
Proyecto 1/Programa/proy01/: CMakeCache.txt  Makefile  cmake_install.cmake  paa_reader  read_paa.cpp
Proyecto 1/Tarea 2/: Tarea2.cpp
Proyecto 2/Programa/srs/: coincidences.cc  fit.C  histo.root  histo1.root  histo2.root  histo3.root  histo4.root  histo5.root  histo6.root  histo7.root  histo_sum.root
Proyecto Final/Ejemplos/LA01/: CMakeLists.txt  exampleLA01.cc  run1.mac  vis.mac
Proyecto Final/Ejemplos/LA01/include/: LA01ActionInitialization.hh  LA01DetectorConstruction.hh  LA01EventAction.hh  LA01PrimaryGeneratorAction.hh  LA01RunAction.hh  LA01SteppingAction.hh
Proyecto Final/Ejemplos/LA01/src/: LA01ActionInitialization.cc  LA01DetectorConstruction.cc  LA01EventAction.cc  LA01PrimaryGeneratorAction.cc  LA01RunAction.cc  LA01SteppingAction.cc
Proyecto Final/Ejemplos/LA02/: run1.mac
Proyecto Final/Ejemplos/LA02/include/: LA02Analysis.hh  LA02DetectorConstruction.hh
Proyecto Final/Ejemplos/LA02/src/: LA02DetectorConstruction.cc
Proyecto Final/Ejemplos/LA03/: CMakeLists.txt  exampleLA03.cc  run1.mac
Proyecto Final/Ejemplos/LA03/include/: LA03ActionInitialization.hh  LA03DetectorConstruction.hh  LA03EventAction.hh  LA03PrimaryGeneratorAction.hh  LA03RunAction.hh  LA03StackingAction.hh  LA03SteppingAction.hh
Proyecto Final/Ejemplos/LA03/src/: LA03ActionInitialization.cc  LA03DetectorConstruction.cc  LA03EventAction.cc  LA03PrimaryGeneratorAction.cc  LA03RunAction.cc  LA03StackingAction.cc  LA03SteppingAction.cc
Proyecto Final/Ejemplos/LA04/: run1.mac
Proyecto Final/Ejemplos/LA04/include/: LA04EventAction.hh  LA04RunAction.hh
Proyecto Final/Ejemplos/LA04/src/: LA04ActionInitialization.cc  LA04DetectorConstruction.cc  LA04PrimaryGeneratorAction.cc  LA04RunAction.cc
Proyecto Final/Simulacion/Detector/: run1.mac
Proyecto Final/Simulacion/Detector/include/: LA04EventAction.hh  LA04RunAction.hh
Proyecto Final/Simulacion/Detector/src/: LA04DetectorConstruction.cc  LA04EventAction.cc  LA04PrimaryGeneratorAction.cc  LA04RunAction.cc  LA04StackingAction.cc
Proyecto Final/Simulacion/Energia/: CMakeLists.txt  run1.mac
Proyecto Final/Simulacion/Energia/include/: LA04Analysis.hh  LA04EventAction.hh  LA04RunAction.hh  LA04StackingAction.hh
Proyecto Final/Simulacion/Energia/src/: LA04EventAction.cc  (+5 more)
Proyecto Final/Simulacion/Graficas/: Eficiencia_Energia.txt  Eficiencia_geometrica.txt  energia.py
Root_examples/: miarchivo.root  script.C
Root_examples/Ejemplos de clase/: H2D_perf.C  ajustes.C  funciones01.C  funciones02.C
Root_examples/codes_2.III/Build_e1/: CMakeCache.txt  Makefile  cmake_install.cmake  example01
Root_examples/codes_2.III/Build_e2/: CMakeCache.txt  Makefile  a.root  cmake_install.cmake  example02
Root_examples/codes_2.III/e1/: CMakeLists.txt
Root_examples/codes_2.III/e2/: CMakeLists.txt  example02.cpp
Tarea 1/: tarea1
Tarea 2/: Resultados_simple.txt  tarea1_R3  tarea1_class02  tarea1_simple  tarea1ii1_VecR3.cpp  tarea1ii1_class01.cpp  tarea1ii1_class02.cpp  tarea1ii1_persona.cpp  tarea1ii1_persona.hpp  tarea1ii2_class03_R3.cpp  tarea1ii3_VecR3.hpp
Tarea 3/: Leeme.txt
Tarea 3/Tarea_1.ii.1/: README.txt
Tarea 3/Tarea_1.ii.1/Build_T1.ii.1/: CMakeCache.txt  Makefile  cmake_install.cmake  tarea1.ii.1
Tarea 3/Tarea_1.ii.1/T_1.ii.1/: CMakeLists.txt  tarea1ii1_simple.cpp  tarea1ii1_simple.hpp
Tarea 3/Tarea_1.ii.2/: README.txt
Tarea 3/Tarea_1.ii.2/Build_T_1.ii.2/: CMakeCache.txt  Makefile  cmake_install.cmake  tarea1.ii.2
Tarea 3/Tarea_1.ii.2/T_1.ii.2/: CMakeLists.txt
Tarea 3/Tarea_1.ii.3/: README.txt
Tarea 3/Tarea_1.ii.3/Build_T_1.ii.3/: CMakeCache.txt  Makefile  cmake_install.cmake  tarea1.ii.3
Tarea 3/Tarea_1.ii.3/T_1.ii.3/: CMakeLists.txt  tarea1ii2_class03_R3.cpp
Tarea 3/Tarea_1.ii.3/T_1.ii.3/vector/: CMakeLists.txt
(+4 files in other folders)
